--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,13 +1,27 @@
+html{
+  margin:auto;
+}
 .intro {
-  background-image:url('../image/fond.jpeg');
+  /*background-image:url('../image/fond.jpeg');
   background-repeat: round;
+  background-size: cover;*/
   background-size: cover;
+  background-attachment: fixed;
+  height: 1000px;
+  box-sizing: border-box;
+  background-size:auto;
+  background-attachment: scroll;
+  background-color: black;
   color:white;
   border-radius: 10px;
-	-moz-border-radius: 10px;
+  -moz-border-radius: 10px;
+  box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+  height:98vh;
+  width:100vw;
 }
 
 h1{
+  padding-top: 80px;
   text-align:center;
   font-size: 50px;
   font-family: Georgia;
@@ -15,8 +29,124 @@ h1{
 }
 
 
-li{
-  display:inline-table;
-  position:relative;
-  bottom: 1px;
+ul{
+  display: table;
+  width: 500px;
+  margin: 100px auto;
+  padding: 0;
+  margin-top: 100px;
 }
+
+ul li{
+  display: table-cell;
+}
+
+.formation{
+  text-align: center;
+}
+
+.compétences{
+  text-align: center;
+}
+
+.experience{
+  text-align: center;
+}
+
+
+.sous-formation {
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+  width:1000px;
+  height:200px;
+  margin-left: 180px;
+  text-align:center;
+  padding-top: 20px;
+}
+
+.contact{
+  background-color: lightgrey;
+  color:black;
+}
+
+.sous-contact{
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+  width:1000px;
+  height:250px;
+  margin-left: 180px;
+  text-align:center;
+  padding-top: 20px;
+  background-color: grey;
+}
+
+.sous-experience {
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+  width:1000px;
+  height:300px;
+  margin-left: 180px;
+  text-align:center;
+  padding-top: 20px;
+}
+
+
+/*
+.progress-bar {
+width: 300px;
+height: 24px;
+padding: 4px;
+background-color: #191919;
+border-radius: 16px;
+-webkit-border-radius: 16px;
+-moz-border-radius: 16px;
+box-shadow: inset 0 1px 2px #000, 0 1px 0 #2b2b2b;
+-webkit-box-shadow: inset 0 1px 2px #000, 0 1px 0 #2b2b2b;
+-moz-box-shadow: inset 0 1px 2px #000, 0 1px 0 #2b2b2b;
+}
+
+.progress-bar:before {
+content: '';
+display: block;
+position: absolute;
+width: 200px;
+height: 24px;
+background: #999;
+border-radius: 12px;
+-webkit-border-radius: 12px;
+-moz-border-radius: 12px;
+box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), inset 0 -1px 3px rgba(0, 0, 0, 0.4), 0 1px 1px #000;
+-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), inset 0 -1px 3px rgba(0, 0, 0, 0.4), 0 1px 1px #000;
+-moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), inset 0 -1px 3px rgba(0, 0, 0, 0.4), 0 1px 1px #000;
+}
+
+.progress-bar:after {
+content: '|||||||||||||';
+display: block;
+position: absolute;
+width: 200px;
+height: 24px;
+overflow: hidden;
+border-radius: 12px;
+-webkit-border-radius: 12px;
+-moz-border-radius: 12px;
+transform: skewX(-30deg);
+-webkit-transform: skewX(-30deg);
+-moz-transform: skewX(-30deg);
+-o-transform: skewX(-30deg);
+font: bold 120px/80px sans-serif;
+letter-spacing: -6px;
+color: #000;
+opacity: 0.06;
+}
+
+
+.blue:before {
+background: #099;
+background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#099), to(#006A6B));
+background: -moz-linear-gradient(top, #099, #006A6B);
+}
+*/
