mise en place de boite + insertion photo

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,17 @@
 html{
   margin:auto;
 }
+
+img{
+    width:300px;
+    height:250px;
+    float: left;
+    margin-left: 20px;
+    padding-top: 20px;
+    border-radius: 50%;
+}
+
+
 .intro {
   /*background-image:url('../image/fond.jpeg');
   background-repeat: round;
@@ -25,9 +36,16 @@ h1{
   text-align:center;
   font-size: 50px;
   font-family: Georgia;
-
+  margin-right: 50px;
+  margin-left: 50px;
+  font-family: 'Petit Formal Script', cursive;
 }
 
+strong{
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+
+}
 
 ul{
   display: table;
@@ -47,6 +65,7 @@ ul li{
 
 .compétences{
   text-align: center;
+  position:relative;
 }
 
 .experience{
@@ -91,6 +110,12 @@ ul li{
   margin-left: 180px;
   text-align:center;
   padding-top: 20px;
+}
+
+div:nth-child(3n+1)
+{
+  color:red;
+  z-index:1;
 }
 
 
@@ -150,3 +175,63 @@ background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#099), to(#006A6B));
 background: -moz-linear-gradient(top, #099, #006A6B);
 }
 */
+.sous-langage{
+  border-radius: 40px;
+  /*-moz-border-radius: 10px;*/
+  box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+  width:300px;
+  height:200px;
+  margin-left: 180px;
+  text-align:center;
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+
+.sous-logiciel{
+  border-radius: 40px;
+  /*-moz-border-radius: 10px;*/
+  box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+  width:300px;
+  height:200px;
+  margin-left: 180px;
+  text-align:center;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  float:bottom;
+
+}
+
+.sous-projets{
+  border-radius: 40px;
+  /*-moz-border-radius: 10px;*/
+  box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+  width:300px;
+  height:200px;
+  margin-left: 180px;
+  text-align:center;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  float: right;
+
+}
+
+.sous-langues{
+  border-radius: 40px;
+  /*-moz-border-radius: 10px;*/
+  box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+  width:300px;
+  height:200px;
+  margin-left: 180px;
+  text-align:center;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  float:right;
+}
+/*
+div {
+  display:inline-block;
+}
+
+.sous-langues,.sous-logiciel{
+    display:inline-block;
+}
