--- a/CSS/style.css
+++ b/CSS/style.css
@@ -47,18 +47,26 @@ strong{
 
 }
 
-ul{
+ul a{
   display: table;
-  width: 500px;
-  margin: 100px auto;
+  width: 200px;
+  margin: 0px ;
   padding: 0;
   margin-top: 100px;
+  text-decoration: none;
+  color:grey;
 }
 
-ul li{
+ul li {
   display: table-cell;
+  text-decoration: none;
 }
 
+nav ul{
+  display: flex;
+  justify-content: space-between;
+
+}
 .formation{
   text-align: center;
 }
@@ -82,11 +90,13 @@ ul li{
   margin-left: 180px;
   text-align:center;
   padding-top: 20px;
+  margin-bottom:10px;
 }
 
 .contact{
   background-color: lightgrey;
   color:black;
+  padding-bottom: 50px;
 }
 
 .sous-contact{
@@ -99,6 +109,7 @@ ul li{
   text-align:center;
   padding-top: 20px;
   background-color: grey;
+
 }
 
 .sous-experience {
@@ -112,79 +123,32 @@ ul li{
   padding-top: 20px;
 }
 
-div:nth-child(3n+1)
+div:nth-child(2n+1)
 {
   color:red;
   z-index:1;
+  float:right;
+}
+
+div:nth-child(2n+2)
+{
+color:blue;
+  z-index:-1;
 }
 
 
-/*
-.progress-bar {
-width: 300px;
-height: 24px;
-padding: 4px;
-background-color: #191919;
-border-radius: 16px;
--webkit-border-radius: 16px;
--moz-border-radius: 16px;
-box-shadow: inset 0 1px 2px #000, 0 1px 0 #2b2b2b;
--webkit-box-shadow: inset 0 1px 2px #000, 0 1px 0 #2b2b2b;
--moz-box-shadow: inset 0 1px 2px #000, 0 1px 0 #2b2b2b;
-}
-
-.progress-bar:before {
-content: '';
-display: block;
-position: absolute;
-width: 200px;
-height: 24px;
-background: #999;
-border-radius: 12px;
--webkit-border-radius: 12px;
--moz-border-radius: 12px;
-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), inset 0 -1px 3px rgba(0, 0, 0, 0.4), 0 1px 1px #000;
--webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), inset 0 -1px 3px rgba(0, 0, 0, 0.4), 0 1px 1px #000;
--moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), inset 0 -1px 3px rgba(0, 0, 0, 0.4), 0 1px 1px #000;
-}
-
-.progress-bar:after {
-content: '|||||||||||||';
-display: block;
-position: absolute;
-width: 200px;
-height: 24px;
-overflow: hidden;
-border-radius: 12px;
--webkit-border-radius: 12px;
--moz-border-radius: 12px;
-transform: skewX(-30deg);
--webkit-transform: skewX(-30deg);
--moz-transform: skewX(-30deg);
--o-transform: skewX(-30deg);
-font: bold 120px/80px sans-serif;
-letter-spacing: -6px;
-color: #000;
-opacity: 0.06;
-}
-
-
-.blue:before {
-background: #099;
-background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#099), to(#006A6B));
-background: -moz-linear-gradient(top, #099, #006A6B);
-}
-*/
 .sous-langage{
   border-radius: 40px;
   /*-moz-border-radius: 10px;*/
   box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
   width:300px;
-  height:200px;
-  margin-left: 180px;
+  height:245px;
+  margin-left: 60px;
   text-align:center;
   padding-top: 20px;
   padding-bottom: 10px;
+  float:left;
+margin-right: 300px;
 }
 
 .sous-logiciel{
@@ -193,11 +157,11 @@ background: -moz-linear-gradient(top, #099, #006A6B);
   box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
   width:300px;
   height:200px;
-  margin-left: 180px;
+  margin-right: 300px;
   text-align:center;
   padding-top: 20px;
   padding-bottom: 10px;
-  float:bottom;
+
 
 }
 
@@ -208,10 +172,11 @@ background: -moz-linear-gradient(top, #099, #006A6B);
   width:300px;
   height:200px;
   margin-left: 180px;
+  margin-right:20px;
   text-align:center;
   padding-top: 20px;
   padding-bottom: 10px;
-  float: right;
+  margin-top: 20px;
 
 }
 
@@ -222,16 +187,54 @@ background: -moz-linear-gradient(top, #099, #006A6B);
   width:300px;
   height:200px;
   margin-left: 180px;
+  margin-right:100px;
+  margin-bottom: 50px;
   text-align:center;
   padding-top: 20px;
   padding-bottom: 10px;
   float:right;
 }
-/*
-div {
-  display:inline-block;
+
+.retour-haut{
+  position:fixed;
+  right:20px;
+  bottom:20px;
+
+}
+ h2{
+   text-align: center;
+ }
+
+.fa-arrow-up{
+  color:grey;
 }
 
-.sous-langues,.sous-logiciel{
-    display:inline-block;
+#linux{
+  width:80px;
+
+}
+
+.accueil{
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+  width:1000px;
+  height:400px;
+  margin-left: 180px;
+  text-align:center;
+  padding-top: 0px;
+  margin-bottom:10px;
+  margin-top:20px;
+  padding-bottom: 0;
+}
+
+section.accueil{
+  height:400px;
+}
+
+.fa-angle-right{
+padding-left: 20px;
+position:relative;
+right:20px;
+color:beige;
 }
