--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,3 @@
-html{
-  margin:auto;
-}
 
 img{
     width:300px;
@@ -11,7 +8,6 @@ img{
     border-radius: 50%;
 }
 
-
 .intro {
   /*background-image:url('../image/fond.jpeg');
   background-repeat: round;
@@ -19,16 +15,16 @@ img{
   background-size: cover;
   background-attachment: fixed;
   height: 1000px;
-  box-sizing: border-box;
+  /*box-sizing: border-box;*/
   background-size:auto;
   background-attachment: scroll;
-  background-color: black;
+  background:linear-gradient(white,black);
   color:white;
   border-radius: 10px;
   -moz-border-radius: 10px;
   box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
-  height:98vh;
-  width:100vw;
+  height:93vh;
+  width:98vw;
 }
 
 h1{
@@ -54,7 +50,7 @@ ul a{
   padding: 0;
   margin-top: 100px;
   text-decoration: none;
-  color:grey;
+  color:white;
 }
 
 ul li {
@@ -69,6 +65,8 @@ nav ul{
 }
 .formation{
   text-align: center;
+  background: linear-gradient(white, grey);
+  height:550px;
 }
 
 .compétences{
@@ -78,6 +76,7 @@ nav ul{
 
 .experience{
   text-align: center;
+  height:1000px;
 }
 
 
@@ -92,9 +91,18 @@ nav ul{
   padding-top: 20px;
   margin-bottom:10px;
 }
+.st{
+  width:200px;
+
+}
+
+
+span{
+  display: flex;
+}
 
 .contact{
-  background-color: lightgrey;
+  background: radial-gradient(white,lightgrey);
   color:black;
   padding-bottom: 50px;
 }
@@ -103,13 +111,14 @@ nav ul{
   border-radius: 10px;
   -moz-border-radius: 10px;
   box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
-  width:1000px;
-  height:250px;
+  width:600px;
+  height:320px;
   margin-left: 180px;
   text-align:center;
   padding-top: 20px;
-  background-color: grey;
-
+  background: linear-gradient(white,grey);
+  margin-top:20px;
+  font-size: 18px;
 }
 
 .sous-experience {
@@ -142,13 +151,13 @@ color:blue;
   /*-moz-border-radius: 10px;*/
   box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
   width:300px;
-  height:245px;
+  height:220px;
   margin-left: 60px;
   text-align:center;
   padding-top: 20px;
   padding-bottom: 10px;
   float:left;
-margin-right: 300px;
+  margin-right: 300px;
 }
 
 .sous-logiciel{
@@ -219,13 +228,13 @@ margin-right: 300px;
   -moz-border-radius: 10px;
   box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
   width:1000px;
-  height:400px;
+  height:1000px;
   margin-left: 180px;
   text-align:center;
   padding-top: 0px;
   margin-bottom:10px;
   margin-top:20px;
-  padding-bottom: 0;
+  padding-bottom: 20px;
 }
 
 section.accueil{
@@ -237,4 +246,31 @@ padding-left: 20px;
 position:relative;
 right:20px;
 color:beige;
+}
+
+progress{
+   color:red;
+   height:12px;
+   width:50px;
+   background:black;
+   border-radius: 10px;
+
+ }
+
+ .cv{
+   float:left;
+   margin-left:50px;
+   color:black;
+
+ }
+
+.eportfolio{
+  float:right;
+  margin-right:20px;
+  color:black;
+}
+
+
+h3{
+  text-align: center;
 }
